--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 13dbaa7
-	trimbase = 
+	trim = rail_recognition
+	base = c883324
+	trimbase = 13dbaa7
 	parent = upstream
 	previous = a994185
