--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4a47412
-	trimbase = 
+	trim = rail_pick_and_place_wrapper
+	base = 2cee56c
+	trimbase = 4a47412
 	parent = upstream
 	previous = a994185
