--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 524d512
-	trimbase = 2f328d9
+	trimbase = 
 	parent = upstream
 	previous = 4795745
