--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 1b34b61
-	trimbase = 
+	base = 9a80aab
+	trimbase = 1b34b61
 	parent = upstream
 	previous = a994185
