--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2638b79
-	trimbase = 
+	trim = rail_grasping
+	base = a11a883
+	trimbase = 2638b79
 	parent = upstream
 	previous = a994185
