--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8a4b86b
-	trimbase = 
+	trim = rail_grasp_collection
+	base = 0dadeed
+	trimbase = 8a4b86b
 	parent = upstream
 	previous = a994185
