--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = f0232a5
-	trimbase = 
+	base = 5748b12
+	trimbase = f0232a5
 	parent = upstream
 	previous = a994185
