--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a11a883
+	base = 4eb2f13
 	trimbase = 
 	parent = release/indigo/rail_grasping
-	previous = 
+	previous = a11a883
