--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 37e24d2
+	base = 8d2eb93
 	trimbase = 
 	parent = debian/indigo/rail_grasping
-	previous = 
+	previous = 37e24d2
