--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d440166
+	base = 5dd6a53
 	trimbase = 
 	parent = debian/indigo/rail_grasp_collection
-	previous = 
+	previous = d440166
