--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9296e0a
+	base = 67c9452
 	trimbase = 
 	parent = debian/indigo/rail_pick_and_place_wrapper
-	previous = 
+	previous = 9296e0a
