--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
- <package>
+<package>
   <name>rail_pick_and_place</name>
-  <version>0.0.1</version>
+  <version>0.0.2</version>
   <description>Pick and Place Functionality for CARL in the RAIL Lab</description>
 
   <author email="davidkent@wpi.edu">David Kent</author>
@@ -15,8 +15,12 @@
  
   <buildtool_depend>catkin</buildtool_depend>
 
+  <run_depend>rail_grasp_collection</run_depend>
+  <run_depend>rail_grasping</run_depend>
   <run_depend>rail_pick_and_place_msgs</run_depend>
-  
+  <run_depend>rail_pick_and_place_wrapper</run_depend>
+  <run_depend>rail_recognition</run_depend>
+
   <export>
     <metapackage />
   </export>
