--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 274237c
+	base = c475758
 	trimbase = 
 	parent = debian/indigo/rail_recognition
-	previous = 
+	previous = 274237c
