--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 10db3dd
+	base = d3924b0
 	trimbase = 
 	parent = rpm/indigo/rail_grasping
-	previous = 
+	previous = 10db3dd
