--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0dadeed
+	base = 828e59d
 	trimbase = 
 	parent = release/indigo/rail_grasp_collection
-	previous = 
+	previous = 0dadeed
