--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 33bf5fd
+	base = 5c8086d
 	trimbase = 
 	parent = rpm/indigo/rail_grasp_collection
-	previous = 
+	previous = 33bf5fd
