--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2cee56c
+	base = f377c86
 	trimbase = 
 	parent = release/indigo/rail_pick_and_place_wrapper
-	previous = 
+	previous = 2cee56c
