--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e4f4914
+	base = 0d7faed
 	trimbase = 
 	parent = rpm/indigo/rail_pick_and_place_wrapper
-	previous = 
+	previous = e4f4914
