--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5969702
+	base = 6b39b6d
 	trimbase = 
 	parent = rpm/indigo/rail_pick_and_place_msgs
-	previous = 
+	previous = 5969702
