--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 293fd8e
+	base = 139620b
 	trimbase = 
 	parent = rpm/indigo/rail_pick_and_place
-	previous = 
+	previous = 293fd8e
