--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c883324
+	base = e8f8015
 	trimbase = 
 	parent = release/indigo/rail_recognition
-	previous = 
+	previous = c883324
