--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1b3d753
+	base = ef361a6
 	trimbase = 
 	parent = rpm/indigo/rail_recognition
-	previous = 
+	previous = 1b3d753
