--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 6cf69f9
-	trimbase = 
+	base = 0cc14ff
+	trimbase = 6cf69f9
 	parent = upstream
 	previous = 6266508
