--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = baf866f
-	trimbase = 
+	trim = rail_pick_and_place_tools
+	base = 96fe936
+	trimbase = baf866f
 	parent = upstream
 	previous = 6266508
