--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = af3e409
-	trimbase = 
+	base = 1f80229
+	trimbase = af3e409
 	parent = upstream
 	previous = 6266508
