--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = 0dadeed
-	trimbase = 8a4b86b
+	trimbase = 
 	parent = upstream
 	previous = a994185
