--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 739cafc
-	trimbase = 
+	base = 4d6f968
+	trimbase = 739cafc
 	parent = upstream
 	previous = 6266508
