--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5c2333e
-	trimbase = 
+	trim = graspdb
+	base = 241eeab
+	trimbase = 5c2333e
 	parent = upstream
 	previous = 6266508
