--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96fe936
+	base = 6f75909
 	trimbase = 
 	parent = release/indigo/rail_pick_and_place_tools
-	previous = 
+	previous = 96fe936
