--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f0e57f3
+	base = ad7cb70
 	trimbase = 
 	parent = debian/indigo/rail_pick_and_place_tools
-	previous = 
+	previous = f0e57f3
