--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 241eeab
+	base = a810196
 	trimbase = 
 	parent = release/indigo/graspdb
-	previous = 
+	previous = 241eeab
