--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eff70c3
+	base = f3e05d1
 	trimbase = 
 	parent = debian/indigo/graspdb
-	previous = 
+	previous = eff70c3
