--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.2-0": ["Wed Feb 18 2015", "David Kent", "davidkent@wpi.edu"]}
+{"1.0.0-0": ["Fri Mar 27 2015", "David Kent", "davidkent@wpi.edu"], "0.0.2-0": ["Wed Feb 18 2015", "David Kent", "davidkent@wpi.edu"]}
