--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3fc3493
+	base = d91ad91
 	trimbase = 
 	parent = rpm/indigo/rail_pick_and_place_tools
-	previous = 
+	previous = 3fc3493
