--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0eeaefb
+	base = 915cd4b
 	trimbase = 
 	parent = rpm/indigo/graspdb
-	previous = 
+	previous = 0eeaefb
