Rebase from 'upstream'

--- a/rail_pick_and_place_tools/CMakeLists.txt
+++ b/rail_pick_and_place_tools/CMakeLists.txt
@@ -68,8 +68,13 @@ install(DIRECTORY include/${PROJECT_NAME}/
 )
 
 ## Copy launch files
-install(DIRECTORY launch
+install(DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
+
+## Copy rviz files
+install(DIRECTORY rviz/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz
 )
 
 install(FILES
