--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 53cb35e
-	trimbase = 
+	base = e933ea7
+	trimbase = 53cb35e
 	parent = upstream
 	previous = 754ea8f
