--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 96fe936
-	trimbase = baf866f
+	trimbase = 
 	parent = upstream
 	previous = 6266508
