--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = 1f80229
-	trimbase = af3e409
+	trimbase = 
 	parent = upstream
 	previous = 6266508
