--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = be805c1
-	trimbase = 
+	base = f4eda33
+	trimbase = be805c1
 	parent = upstream
 	previous = 754ea8f
