--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 66dc88f
-	trimbase = 
+	base = 2783c53
+	trimbase = 66dc88f
 	parent = upstream
 	previous = 754ea8f
