--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 99800b1
-	trimbase = 68dc129
+	trimbase = 
 	parent = upstream
 	previous = 6266508
