--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = b9fde79
-	trimbase = 
+	base = ead2764
+	trimbase = b9fde79
 	parent = upstream
 	previous = 754ea8f
