--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 9a764b1
-	trimbase = 
+	base = 0dd1e75
+	trimbase = 9a764b1
 	parent = upstream
 	previous = 754ea8f
