--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 6bd487a
-	trimbase = 
+	base = 5f68c48
+	trimbase = 6bd487a
 	parent = upstream
 	previous = 3058877
