--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 3c6f83f
-	trimbase = 22b0b61
+	trimbase = 
 	parent = upstream
 	previous = 754ea8f
