--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 6553131
-	trimbase = 
+	base = bc36478
+	trimbase = 6553131
 	parent = upstream
 	previous = 3058877
