--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 71a5d06
-	trimbase = 
+	base = 596d222
+	trimbase = 71a5d06
 	parent = upstream
 	previous = 3058877
