--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 9b1be78
-	trimbase = 
+	base = cafff05
+	trimbase = 9b1be78
 	parent = upstream
 	previous = 4f36153
