--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 8a4c7c4
-	trimbase = 9deb649
+	trimbase = 
 	parent = upstream
 	previous = 3058877
