--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 5225023
-	trimbase = 3d2d357
+	trimbase = 
 	parent = upstream
 	previous = 3058877
