--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
-	base = 912d42b
-	trimbase = 
+	base = b2605ea
+	trimbase = 912d42b
 	parent = upstream
 	previous = 4f36153
