--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = d32c1c5
-	trimbase = 4edb6e3
+	trimbase = 
 	parent = upstream
 	previous = 3058877
