--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = 85671d1
-	trimbase = 
+	base = a76d00c
+	trimbase = 85671d1
 	parent = upstream
 	previous = 4f36153
