--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 673d767
-	trimbase = 
+	base = 27eb03e
+	trimbase = 673d767
 	parent = upstream
 	previous = 4f36153
