--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>graspdb</name>
-  <version>1.0.2</version>
+  <version>1.0.3</version>
   <description>Grasp Training SQL Database Client Library</description>
 
   <author email="rctoris@wpi.edu">Russell Toris</author>
@@ -21,7 +21,7 @@
   <build_depend>rail_pick_and_place_msgs</build_depend>
   <build_depend>roscpp_serialization</build_depend>
 
-  <run_depend>libpqxx</run_depend>
+  <run_depend>libpqxx-dev</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
