--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(rail_recognition)
 
-find_package(catkin REQUIRED COMPONENTS roscpp roslib actionlib actionlib_msgs graspdb pcl_conversions pcl_ros rail_manipulation_msgs rail_pick_and_place_msgs rail_segmentation sensor_msgs std_msgs std_srvs)
+find_package(catkin REQUIRED COMPONENTS roscpp roslib actionlib actionlib_msgs graspdb pcl_conversions pcl_ros
+rail_manipulation_msgs rail_pick_and_place_msgs rail_segmentation sensor_msgs std_msgs std_srvs tf2)
 
 ###################################################
 ## Declare things to be passed to other projects ##
@@ -21,9 +22,20 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 link_directories(${catkin_LIBRARY_DIRS})
 
 ## Declare a cpp executable
-add_executable(model_generator src/ModelGenerator.cpp)
-add_executable(object_recognizer src/ObjectRecognizer.cpp src/PCRecognizer.cpp)
-add_executable(object_recognition_listener src/ObjectRecognitionListener.cpp src/PCRecognizer.cpp)
+add_executable(model_generator
+  nodes/model_generator.cpp
+  src/ModelGenerator.cpp
+)
+add_executable(object_recognizer
+  nodes/object_recognizer.cpp
+  src/ObjectRecognizer.cpp
+  src/PointCloudRecognizer.cpp
+)
+add_executable(object_recognition_listener
+  nodes/object_recognition_listener.cpp
+  src/ObjectRecognitionListener.cpp
+  src/PointCloudRecognizer.cpp
+)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(model_generator ${catkin_LIBRARIES} ${PCL_LIBRARIES} libvtkCommon.so libvtkFiltering.so libvtkRendering.so libvtkGraphics.so)
