--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 29e9307
-	trimbase = 
+	base = 381086b
+	trimbase = 29e9307
 	parent = upstream
 	previous = 30ab05d
