--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = b2605ea
-	trimbase = 912d42b
+	trimbase = 
 	parent = upstream
 	previous = 4f36153
