--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 89a2ff5
-	trimbase = cf75d18
+	trimbase = 
 	parent = upstream
 	previous = 4f36153
