--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = 210c14e
-	trimbase = 
+	base = 6ec0eb3
+	trimbase = 210c14e
 	parent = upstream
 	previous = 30ab05d
