--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = e88dcb6
-	trimbase = 
+	base = ffd7b76
+	trimbase = e88dcb6
 	parent = upstream
 	previous = 30ab05d
