--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = a8ff014
-	trimbase = 
+	base = f08eedb
+	trimbase = a8ff014
 	parent = upstream
 	previous = 30ab05d
