--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 7af10a7
-	trimbase = 5047025
+	trimbase = 
 	parent = upstream
 	previous = 30ab05d
