--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 3f63ddc
-	trimbase = 
+	base = 779355b
+	trimbase = 3f63ddc
 	parent = upstream
 	previous = e298dc7
