--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 86ec23f
-	trimbase = 54656a6
+	trimbase = 
 	parent = upstream
 	previous = 30ab05d
