--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
-	base = 1ccfa3b
-	trimbase = 
+	base = 3c009c2
+	trimbase = 1ccfa3b
 	parent = upstream
 	previous = e298dc7
