--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 267e83d
-	trimbase = 
+	base = 58348bc
+	trimbase = 267e83d
 	parent = upstream
 	previous = e298dc7
