--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 550d51f
-	trimbase = 
+	base = 2b1e923
+	trimbase = 550d51f
 	parent = upstream
 	previous = e298dc7
