--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(catkin REQUIRED
   roscpp
   roscpp_serialization
   sensor_msgs
+  tf2
 )
 
 ###################################################
@@ -51,7 +52,9 @@ set(GRASPDB_SOURCE
 add_library(${PROJECT_NAME} ${GRASPDB_SOURCE})
 
 ## Add message build dependencies (needed for source build)
-add_dependencies(${PROJECT_NAME} rail_pick_and_place_msgs_gencpp)
+add_dependencies(${PROJECT_NAME}
+  rail_pick_and_place_msgs_gencpp
+)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}
