--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>graspdb</name>
-  <version>1.0.4</version>
+  <version>1.1.0</version>
   <description>Grasp Training SQL Database Client Library</description>
 
   <author email="rctoris@wpi.edu">Russell Toris</author>
@@ -17,15 +17,17 @@
   <build_depend>libpqxx-dev</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
   <build_depend>rail_pick_and_place_msgs</build_depend>
   <build_depend>roscpp_serialization</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>tf2</build_depend>
 
   <run_depend>libpqxx-dev</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
   <run_depend>rail_pick_and_place_msgs</run_depend>
   <run_depend>roscpp_serialization</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>tf2</run_depend>
 </package>
 
