--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 25ff3b9
-	trimbase = 390a4a8
+	trimbase = 
 	parent = upstream
 	previous = e298dc7
