--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = a28058f
-	trimbase = 
+	base = 216883b
+	trimbase = a28058f
 	parent = upstream
 	previous = 9ea46ce
