--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
-	base = 7a37274
-	trimbase = 
+	base = 168b1c3
+	trimbase = 7a37274
 	parent = upstream
 	previous = 9ea46ce
