--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 29a68bf
-	trimbase = 
+	base = 330d4f6
+	trimbase = 29a68bf
 	parent = upstream
 	previous = 9ea46ce
