--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 2f3b1ab
-	trimbase = 0f5d98b
+	trimbase = 
 	parent = upstream
 	previous = e298dc7
