--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 5301316
-	trimbase = 
+	base = 55a6fdd
+	trimbase = 5301316
 	parent = upstream
 	previous = 9ea46ce
