--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = b26bdd3
-	trimbase = 
+	base = ec0b661
+	trimbase = b26bdd3
 	parent = upstream
 	previous = 9ea46ce
