--- a/rail_pick_and_place_tools/package.xml
+++ b/rail_pick_and_place_tools/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>rail_pick_and_place_tools</name>
-  <version>1.1.1</version>
+  <version>1.1.2</version>
   <description>RViz Plugins for Collecting Grasps and Generating Models</description>
 
   <author email="rctoris@wpi.edu">Russell Toris</author>
@@ -17,6 +17,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>actionlib</build_depend>
+  <build_depend>boost</build_depend>
   <build_depend>graspdb</build_depend>
   <build_depend>rail_pick_and_place_msgs</build_depend>
   <build_depend>roscpp</build_depend>
@@ -24,6 +25,7 @@
   <build_depend>std_srvs</build_depend>
 
   <run_depend>actionlib</run_depend>
+  <run_depend>boost</run_depend>
   <run_depend>graspdb</run_depend>
   <run_depend>rail_grasp_collection</run_depend>
   <run_depend>rail_pick_and_place_msgs</run_depend>
