--- a/rail_recognition/CMakeLists.txt
+++ b/rail_recognition/CMakeLists.txt
@@ -36,6 +36,11 @@ include_directories(include
 )
 
 ## Declare a cpp executable
+add_executable(metric_trainer
+  nodes/metric_trainer.cpp
+  src/MetricTrainer.cpp
+  src/PointCloudMetrics.cpp
+)
 add_executable(model_generator
   nodes/model_generator.cpp
   src/ModelGenerator.cpp
@@ -60,9 +65,11 @@ add_executable(rail_grasp_model_retriever
 )
 
 ## Add message build dependencies (needed for source build)
+add_dependencies(metric_trainer
+  rail_pick_and_place_msgs_generate_messages_cpp
+)
 add_dependencies(model_generator
   rail_pick_and_place_msgs_generate_messages_cpp
-  rail_manipulation_msgs_generate_messages_cpp
 )
 add_dependencies(object_recognizer
   rail_manipulation_msgs_generate_messages_cpp
@@ -71,10 +78,13 @@ add_dependencies(object_recognition_listener
   rail_manipulation_msgs_generate_messages_cpp
 )
 add_dependencies(rail_grasp_model_retriever
-  rail_manipulation_msgs_generate_messages_cpp
+  rail_pick_and_place_msgs_generate_messages_cpp
 )
 
 ## Specify libraries to link a library or executable target against
+target_link_libraries(metric_trainer
+  ${catkin_LIBRARIES}
+)
 target_link_libraries(model_generator
   ${catkin_LIBRARIES}
 )
@@ -93,7 +103,7 @@ target_link_libraries(rail_grasp_model_retriever
 #############
 
 ## Mark executables and/or libraries for installation
-install(TARGETS model_generator object_recognizer object_recognition_listener rail_grasp_model_retriever
+install(TARGETS metric_trainer model_generator object_recognizer object_recognition_listener rail_grasp_model_retriever
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
