--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 6a0263b
-	trimbase = 
+	base = 36aa52b
+	trimbase = 6a0263b
 	parent = upstream
 	previous = bf5b87b
