--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
-	base = d84b905
-	trimbase = 
+	base = 537caa9
+	trimbase = d84b905
 	parent = upstream
 	previous = bf5b87b
