--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = a29e23e
-	trimbase = a34930e
+	trimbase = 
 	parent = upstream
 	previous = 9ea46ce
