--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 1776661
-	trimbase = 
+	base = a35cfad
+	trimbase = 1776661
 	parent = upstream
 	previous = bf5b87b
