--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 5d860b4
-	trimbase = 
+	base = 32c73e2
+	trimbase = 5d860b4
 	parent = upstream
 	previous = bf5b87b
