--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = f807375
-	trimbase = 
+	base = a2d6214
+	trimbase = f807375
 	parent = upstream
 	previous = 5676c8c
