--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 36aa52b
-	trimbase = 6a0263b
+	trimbase = 
 	parent = upstream
 	previous = bf5b87b
