--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = d55fe84
-	trimbase = c93b4a2
+	trimbase = 
 	parent = upstream
 	previous = bf5b87b
