--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 664a898
-	trimbase = 
+	base = 8c3df30
+	trimbase = 664a898
 	parent = upstream
 	previous = 5676c8c
