--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = b781e50
-	trimbase = 
+	base = 65eb915
+	trimbase = b781e50
 	parent = upstream
 	previous = 5676c8c
