--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = c0a8801
-	trimbase = 
+	base = bdf8fe3
+	trimbase = c0a8801
 	parent = upstream
 	previous = 12c14a4
