--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = eaacc0c
-	trimbase = 2272ff1
+	trimbase = 
 	parent = upstream
 	previous = 5676c8c
