--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 65b3c24
-	trimbase = 4d4d8f1
+	trimbase = 
 	parent = upstream
 	previous = 5676c8c
