--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = 7fd6a06
-	trimbase = e92fe98
+	trimbase = 
 	parent = upstream
 	previous = 5676c8c
