--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 9b65259
-	trimbase = 
+	base = bebb5de
+	trimbase = 9b65259
 	parent = upstream
 	previous = 12c14a4
