--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = eabab45
-	trimbase = 
+	base = 2f55bd2
+	trimbase = eabab45
 	parent = upstream
 	previous = 12c14a4
