--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = a55edd1
-	trimbase = 
+	base = e50fb32
+	trimbase = a55edd1
 	parent = upstream
 	previous = 12c14a4
