--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = abd2df0
-	trimbase = 
+	base = 4f30a1d
+	trimbase = abd2df0
 	parent = upstream
 	previous = 556a99c
