--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 21efc76
-	trimbase = fb96b6e
+	trimbase = 
 	parent = upstream
 	previous = 12c14a4
