--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = ddad2e2
-	trimbase = 
+	base = d7b4da7
+	trimbase = ddad2e2
 	parent = upstream
 	previous = 556a99c
