--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = 87ad468
-	trimbase = 83ae788
+	trimbase = 
 	parent = upstream
 	previous = 12c14a4
