--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = ceca7a9
-	trimbase = 
+	base = 3046b52
+	trimbase = ceca7a9
 	parent = upstream
 	previous = 556a99c
