--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 16b04da
-	trimbase = 
+	base = c485de3
+	trimbase = 16b04da
 	parent = upstream
 	previous = 556a99c
