--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = db03a51
-	trimbase = 
+	trim = rail_recognition
+	base = 90ac261
+	trimbase = db03a51
 	parent = upstream
 	previous = 556a99c
