--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c59ac17
-	trimbase = 
+	trim = rail_pick_and_place_tools
+	base = 627cbf8
+	trimbase = c59ac17
 	parent = upstream
 	previous = 556a99c
