--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0bdabc7
-	trimbase = 
+	trim = rail_pick_and_place_msgs
+	base = 79190a2
+	trimbase = 0bdabc7
 	parent = upstream
 	previous = 556a99c
