--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6f58fba
-	trimbase = 
+	trim = rail_grasp_collection
+	base = 89ad7d4
+	trimbase = 6f58fba
 	parent = upstream
 	previous = 556a99c
