--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6ec7401
-	trimbase = 
+	trim = rail_pick_and_place
+	base = 144779d
+	trimbase = 6ec7401
 	parent = upstream
 	previous = 556a99c
