--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 236618b
-	trimbase = 
+	trim = graspdb
+	base = 9c32e4d
+	trimbase = 236618b
 	parent = upstream
 	previous = 556a99c
