--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 89ad7d4
+	base = 9bb9a40
 	trimbase = 
 	parent = release/jade/rail_grasp_collection
-	previous = 
+	previous = 89ad7d4
