--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff48444
+	base = ff98c50
 	trimbase = 
 	parent = debian/jade/rail_grasp_collection
-	previous = 
+	previous = ff48444
