--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 79190a2
+	base = 205bde1
 	trimbase = 
 	parent = release/jade/rail_pick_and_place_msgs
-	previous = 
+	previous = 79190a2
