--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d14c6f2
+	base = 331ba56
 	trimbase = 
 	parent = debian/jade/rail_pick_and_place_msgs
-	previous = 
+	previous = d14c6f2
