--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9c32e4d
+	base = f433c65
 	trimbase = 
 	parent = release/jade/graspdb
-	previous = 
+	previous = 9c32e4d
