--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0dda5a3
+	base = 9fcc938
 	trimbase = 
 	parent = debian/jade/graspdb
-	previous = 
+	previous = 0dda5a3
