--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1fed899
+	base = 7040ade
 	trimbase = 
 	parent = debian/jade/rail_pick_and_place_tools
-	previous = 
+	previous = 1fed899
