--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 90ac261
+	base = 984b30d
 	trimbase = 
 	parent = release/jade/rail_recognition
-	previous = 
+	previous = 90ac261
