--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1553c31
+	base = 25b6635
 	trimbase = 
 	parent = debian/jade/rail_recognition
-	previous = 
+	previous = 1553c31
