--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 144779d
+	base = ee14a2f
 	trimbase = 
 	parent = release/jade/rail_pick_and_place
-	previous = 
+	previous = 144779d
