--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 455fc38
+	base = a3ee92b
 	trimbase = 
 	parent = debian/jade/rail_pick_and_place
-	previous = 
+	previous = 455fc38
