--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d1bcb08
+	base = 06c0997
 	trimbase = 
 	parent = rpm/jade/rail_grasp_collection
-	previous = 
+	previous = d1bcb08
