--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6babec9
+	base = eaed1ac
 	trimbase = 
 	parent = rpm/jade/rail_pick_and_place_msgs
-	previous = 
+	previous = 6babec9
