--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3d65ca1
+	base = 800251e
 	trimbase = 
 	parent = rpm/jade/rail_pick_and_place_tools
-	previous = 
+	previous = 3d65ca1
