--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8317b95
+	base = dd9f694
 	trimbase = 
 	parent = rpm/jade/rail_recognition
-	previous = 
+	previous = 8317b95
