--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 49b512e
-	trimbase = 
+	base = ac5c6af
+	trimbase = 49b512e
 	parent = upstream
 	previous = 6138e91
