--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
-	base = c218b06
-	trimbase = 
+	base = 7d690b4
+	trimbase = c218b06
 	parent = upstream
 	previous = 6138e91
