--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 627cbf8
-	trimbase = c59ac17
+	trimbase = 
 	parent = upstream
 	previous = 556a99c
