--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = b12b50d
-	trimbase = 
+	base = 586465a
+	trimbase = b12b50d
 	parent = upstream
 	previous = 6138e91
