--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = aeead0f
-	trimbase = 
+	base = 525e74f
+	trimbase = aeead0f
 	parent = upstream
 	previous = 6138e91
