--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
 	base = 6734e9c
-	trimbase = 808f220
+	trimbase = 
 	parent = upstream
 	previous = 556a99c
