--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = ad3917c
-	trimbase = 
+	base = d74f9f8
+	trimbase = ad3917c
 	parent = upstream
 	previous = 6138e91
