--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
-	base = d8679e5
-	trimbase = 
+	base = fb21f4a
+	trimbase = d8679e5
 	parent = upstream
 	previous = 6138e91
