--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = 3f608d8
-	trimbase = a6639b6
+	trimbase = 
 	parent = upstream
 	previous = 556a99c
