--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = 6ee239a
-	trimbase = 
+	base = 198b061
+	trimbase = 6ee239a
 	parent = upstream
 	previous = 6138e91
