--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = 249c5ad
-	trimbase = 
+	base = c4ff655
+	trimbase = 249c5ad
 	parent = upstream
 	previous = fd04125
