--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_tools
-	base = 693e1f3
-	trimbase = 
+	base = 4b2d505
+	trimbase = 693e1f3
 	parent = upstream
 	previous = fd04125
