--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
 	base = 069064e
-	trimbase = 1401c2f
+	trimbase = 
 	parent = upstream
 	previous = 6138e91
