--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place_msgs
-	base = 2ba6963
-	trimbase = 
+	base = d4ae00a
+	trimbase = 2ba6963
 	parent = upstream
 	previous = fd04125
