--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_pick_and_place
-	base = 3eef546
-	trimbase = 
+	base = f91bcbb
+	trimbase = 3eef546
 	parent = upstream
 	previous = fd04125
