--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_recognition
-	base = b72b007
-	trimbase = 
+	base = 44924b8
+	trimbase = b72b007
 	parent = upstream
 	previous = fd04125
