--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rail_grasp_collection
 	base = 559d942
-	trimbase = aa44d00
+	trimbase = 
 	parent = upstream
 	previous = 6138e91
