--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = graspdb
-	base = a643d36
-	trimbase = 
+	base = 2b2f130
+	trimbase = a643d36
 	parent = upstream
 	previous = fd04125
